--- a/.env
+++ b/.env
@@ -1,2 +1,15 @@
-OPENAI_API_KEY=sk-ImjShuvqsqVHqgCz0e1958C89c9f4eCb89Cc037191A5EdCe
-OPENAI_BASE_URL=https://api.yesapikey.com/v1
+# OpenAI API Configuration
+OPENAI_API_KEY=sk-8jdI9AGg036bAQZOcSEKvCwQqzs2O5qG9mdng9VSYCO1sRKB
+OPENAI_BASE_URL=https://api.openai.com/v1  # Optional, for proxy setup
+
+# Performance Monitoring
+ENABLE_PERFORMANCE_MONITORING=true
+LOG_LEVEL=INFO
+
+# RAG Configuration
+FAISS_INDEX_PATH=faiss_index/
+EMBEDDING_CACHE_SIZE=1000
+
+# Deliberation Settings
+MAX_PARALLEL_REQUESTS=3
+REQUEST_CONFIRMATION=true
