--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # OpenAI API Configuration
-OPENAI_API_KEY=sk-8jdI9AGg036bAQZOcSEKvCwQqzs2O5qG9mdng9VSYCO1sRKB
-OPENAI_BASE_URL=https://api.openai.com/v1  # Optional, for proxy setup
+OPENAI_API_KEY=sk-VIrMMAcTb9YwDr530rgD7L6UIaevbxDY0peQEo4OOcr6bAh4
+OPENAI_BASE_URL=https://api.openai-proxy.org/v1  # Optional, for proxy setup
 
 # Performance Monitoring
 ENABLE_PERFORMANCE_MONITORING=true
